--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,7 @@ h6 {
   font-weight: 700;
   line-height: 56px;
   color: #fff;
+  backdrop-filter: blur(3px);
 }
 
 #hero p {
@@ -263,6 +264,7 @@ h6 {
   margin-bottom: 50px;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
+  backdrop-filter: blur(3px);
 }
 
 #hero p span {
@@ -290,7 +292,12 @@ h6 {
     margin-bottom: 30px;
   }
 }
-
+.blur {
+  background: rgba(255, 255, 255, 0.044); 
+  
+  height: 100vh;
+	width: 100%;
+}
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
