--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,8 +252,9 @@ h6 {
 
 #hero h1 {
   margin: 0 0 10px 0;
-  font-size: 64px;
-  font-weight: 700;
+  text-shadow: 3px 3px 3px #002092;
+  font-size: 70px;
+  font-weight: 1300;
   line-height: 56px;
   color: #fff;
   backdrop-filter: blur(3px);
@@ -262,7 +263,7 @@ h6 {
 #hero p {
   color: #fff;
   margin-bottom: 50px;
-  font-size: 26px;
+  font-size: 30px;
   font-family: "Poppins", sans-serif;
   backdrop-filter: blur(3px);
 }
